...
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#FFFFFF"
        android:text="Alineación"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/plantillaBt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOrdenarPuntos" />

    <Button
        android:id="@+id/plantillaBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#B90B0B"
        android:text="Plantilla"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/alineacionBt"
        app:layout_constraintTop_toBottomOf="@+id/buttonOrdenarPuntos" />

    <Button
        android:id="@+id/btnPortero"
        android:layout_width="96dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:text="Portero"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDefensa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alineacionBt" />

    <Button
        android:id="@+id/btnDefensa"
        android:layout_width="96dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:text="Defensa"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btnCentrocampista"
        app:layout_constraintStart_toEndOf="@+id/btnPortero"
        app:layout_constraintTop_toBottomOf="@+id/alineacionBt" />

    <Button
        android:id="@+id/btnCentrocampista"
        android:layout_width="109dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:text="Centro Campista"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDelantero"
        app:layout_constraintStart_toEndOf="@+id/btnDefensa"
        app:layout_constraintTop_toBottomOf="@+id/alineacionBt" />

    <Button
        android:id="@+id/btnDelantero"
        android:layout_width="95dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:text="Delantero"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCentrocampista"
        app:layout_constraintTop_toBottomOf="@+id/alineacionBt" />

...
