...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!-- EditText de la Contraseña -->
    <EditText
        android:id="@+id/etPasswordOne"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_rounded_background"
        android:ems="10"
        android:hint="Contraseña"
...
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- EditText para Repetir la Contraseña -->
    <EditText
        android:id="@+id/etPasswordTwo"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_rounded_background"
        android:ems="10"
        android:hint="Repetir Contraseña"
...
        android:id="@+id/btJoin"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#3E9B04"
        android:text="Registrarse"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
